manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aks01-5161"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "aks01-5161"
  template:
    metadata:
      labels:
        app: "aks01-5161"
    spec:
      containers:
        - name: "aks01-5161"
          image: "votingappjv1971.azurecr.io/aks01"
          ports:
          - containerPort: 80
