manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aks01-e0f8"
    labels:
        app: "aks01-e0f8"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aks018128-aks01-e0f8.0d0b7f8b086143b688b6.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aks01-e0f8"
                servicePort: 80
